[package]
name = "swnb-complex"
version = "0.2.2"
edition = "2021"
description = "complex number lib"
license-file = "LICENSE"
repository = "https://github.com/swnb/complex-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
